fix(modal): remove extra margins in full-size modal (#1699)
* chore(docs): update dev script

* fix(modal): remove extra margins in full-size modal

* fix(docs): fix missing version number in stylesheet urls

--- a/src/Modal/styles/index.less
+++ b/src/Modal/styles/index.less
@@ -52,11 +52,6 @@
   &-full {
     @modal-full-size-margin-value: @modal-full-size-margin* 2;
     .content-width(~'calc(100% - @{modal-full-size-margin-value})');
-
-    .rs-modal-dialog {
-      margin-left: @modal-full-size-margin;
-      margin-right: @modal-full-size-margin;
-    }
   }
 }
 
